fixed pdf resume download

--- a/static/index.html
+++ b/static/index.html
@@ -153,7 +153,7 @@
                     </h4>
                     <h5 class="intro-resume">
                         <span class="opacity"> Please check out my </span>
-                        <a class="item-box-link" href="static/resume.pdf">
+                        <a class="item-box-link" href="resume.pdf" download="resume.pdf">
                             <span class="item-box-background"></span>
                             <span class="item-box-text inline-text resume">resume</span>
                         </a><span class="opacity">!</span>
