added kickstagram and updated content

--- a/static/index.html
+++ b/static/index.html
@@ -128,8 +128,12 @@
     <section id="intro" class="intro-section">
         <div class="container">
             <div class="maxwidth">
-                <h1 class="intro-title"> Frontend Developer from SF, recently graduated from UCSD in computer science. </h1>
+                <h1 class="intro-title"> UI/UX Designer from SF, recently graduated from UCSD in computer science. </h1>
                 <h4 class="intro-content"> <span class="opacity"> I've formerly interned at </span>
+                    <a class="item-box-link" href="http://kickstagram.io/">
+                        <span class="item-box-background"></span>
+                        <span class="item-box-text inline-text kickstagram">Kickstagram</span>
+                    </a><span class="opacity">,</span>
                         <a class="item-box-link" href="http://fastech.io/">
                             <span class="item-box-background"></span>
                             <span class="item-box-text inline-text fastech">FASTech</span>
