--- a/static/index.html
+++ b/static/index.html
@@ -128,7 +128,7 @@
     <section id="intro" class="intro-section">
         <div class="container">
             <div class="maxwidth">
-                <h1 class="intro-title"> UI/UX Designer from SF, recently graduated from UCSD in computer science. </h1>
+                <h1 class="intro-title"> UI/UX Engineer from SF, recently graduated from UCSD in computer science. </h1>
                 <h4 class="intro-content"> <span class="opacity"> I've formerly interned at </span>
                     <a class="item-box-link" href="http://kickstagram.io/">
                         <span class="item-box-background"></span>
